--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,16 +15,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v4
+      - name: Install pnpm
+        uses: pnpm/setup-node@v4
         with:
-          node-version: 18
-          cache: pnpm
-
+          version: 10
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Build website
         run: pnpm build
-
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -33,17 +31,14 @@ jobs:
   deploy:
     name: Deploy to GitHub Pages
     needs: build
-
     # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
       pages: write # to deploy to Pages
       id-token: write # to verify the deployment originates from an appropriate source
-
     # Deploy to the github-pages environment
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
