--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,17 +12,23 @@ jobs:
     name: Build Docusaurus
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Install pnpm
-        uses: pnpm/setup-node@v4
+        uses: pnpm/action-setup@v4
         with:
           version: 10
+          run_install: false
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
       - name: Build website
         run: pnpm build
+
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
